# u-social

./: .gitignore  alembic.ini  main.py  pyproject.toml
backend/: main.py
backend/alembic/: env.py
backend/database/: database.py
frontend/: package-lock.json  package.json
frontend/src/pages/: posts.astro
