[project]
name = "u-social"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.33",
    "typing-extensions>=4.12.2",
    "sqlmodel>=0.0.20",
    "alembic>=1.13.2",
    "mako>=1.3.5",
    "markupsafe>=2.1.5",
    "pygments>=2.18.0",
]
